objects/sixsense__Batch_Log_Error__c.object
<CustomObject>
    <fields>
        <fullName>sixsense__Batch_Log_Chunk__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Batch Log Chunk</label>
        <referenceTo>sixsense__Batch_Log_Chunk__c</referenceTo>
        <relationshipName>Batch_Log_Errors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sixsense__Batch_Log__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Batch Log</label>
        <referenceTo>sixsense__Batch_Log__c</referenceTo>
        <relationshipName>Batch_Log_Errors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sixsense__Error_Message__c</fullName>
        <label>Error Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sixsense__Hashcode__c</fullName>
        <label>Hashcode</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sixsense__Impact_Record_Id__c</fullName>
        <description>The record Id that this error is related to.</description>
        <label>Impact Record Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sixsense__Is_Ignored__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Ignored</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sixsense__Stack_Trace__c</fullName>
        <description>Detailed stack trace showing additional error information</description>
        <label>Stack Trace</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sixsense__Status_Code__c</fullName>
        <label>Status Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>6sense Batch Log Error</label>
    <nameField>
        <displayFormat>BLE-{00000000}</displayFormat>
        <label>Batch Log Error Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>6sense Batch Log Errors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>